--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
     background-color: #7EFFD4;
+    font-family: "Muli", sans-serif;
+    font-size: 28px;
 }
-h1{
+/* h1{
     font-family: "Muli", sans-serif;
     font-size: 32px;
 }
 p {
-    font-family: "Muli", sans-serif;
+    font-family: "Muli", sans-serif; */
